frontend/src/components/post/post.css
.post {
    background-color: var(--post-background-color);
    padding: 1rem;
    box-shadow: 0px 1px 5px var(--box-shadow-color);
}

.post a {
    text-decoration: none;
}

.post header {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

.post header a {
    color: var(--primary-font-color);
}

.post .details {
    display: flex;
}

.post .details .profilePic_wrapper {
    height: 60px;
    width: 60px;
    border-radius: 5px;
}

.post .details .profilePic_wrapper img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    border-radius: 5px;
}

.post .details .title {
    margin-left: 1rem;
}

.post .details .title h3 {
    font-size: 1rem;
    margin: .25rem 0;
}

.post .details .title span {
    color: var(--secondary-font-color);
    font-size: .85rem;
}

.post .options {
    display: flex;
    gap: 2px;
    padding: .5rem .25rem;
    cursor: pointer;
}

.post .options div {
    background-color: var(--secondary-font-color);
    height: 2px;
    width: 2px;
    border-radius: 2px;
}

.post p {
    color: var(--primary-font-color);
}

.post footer .top {
    display: flex;
    justify-content: space-between;
}

.post footer .top span, 
.post footer .top a {
    color: var(--secondary-font-color);
    font-size: .75rem;
}

.post footer hr {
    border-top: .5px solid var(--secondary-font-color);
}

.dark .post footer hr {
    border-top: .5px solid var(--secondary-dark-font-color);
}

.post footer .bottom {
    display: flex;
    justify-content: space-between;
}

.post footer .bottom span,
.post footer .bottom a {
    color: var(--secondary-font-color);
    font-size: .9rem;
}

@media all and (min-width: 1045px) {
    .post {
        border-radius: 5px;
        margin: 3rem;
    }
}

